# teapp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
myapp/: CMakeLists.txt
mylib/: CMakeLists.txt  Makefile
mylib/include/mylib/: mylib.hpp
mylib/sources/: mylib.cpp
